# mdsecheck

./: Cargo.toml  README.md  script_mentioned_in_tests.sage
.github/workflows/: ci.yml
src/: lib.rs  mat.rs  num.rs  poly.rs
tests/: lib.rs  mat.rs  num.rs  poly.rs
